Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 52f8b208805f9890bd6f539555465d21ab59a3d2.

--- a/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
@@ -173,7 +173,7 @@ There is a [[!FF_project 276]][[!tag bounty]] on some of these tasks.
     "1123688017.3905.22.camel@buko.sinrega.org"]].  This could be checked by a
     static analysis tool.
 
-  * [[service_solahart_jakarta_selatan__082122541663/glibc]]'s [[glibc/critical_section]]s.
+  * [[glibc]]'s [[glibc/critical_section]]s.
 
 
 # Dynamic
