Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 76c051fb5be5abab39efea941c5e9c63844b97c0.

--- a/service_solahart_jakarta_selatan__082122541663/libpthread/t/fix_have_kernel_resources.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread/t/fix_have_kernel_resources.mdwn
@@ -621,7 +621,7 @@ Address problem mentioned in [[/libpthread]], *Threads' Death*.
     <youpi> and try to reproduce the same with a small C program
     <gg0> ehm on ruby2.0 with *context _enabled_ i can not reproduce it
 
-See [[/service_solahart_jakarta_selatan__082122541663/glibc]] for `*context` functions.
+See [[/open_issues/glibc]] for `*context` functions.
 
 
 ## IRC, freenode, #hurd, 2013-11-14
