--- a/service_solahart_jakarta_selatan__082122541663/libpager_deadlock.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpager_deadlock.mdwn
@@ -162,4 +162,4 @@ Deadlocks in libpager/periodic sync have been found.
 
 # See Also
 
-  * [[service_solahart_jakarta_selatan__082122541663/ext2fs_deadlock]]
+  * [[ext2fs_deadlock]]
