Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit d6d0960528e261acb11689d9d4283fea7363d42b.

--- a/service_solahart_jakarta_selatan__082122541663/boehm_gc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/boehm_gc.mdwn
@@ -193,7 +193,7 @@ sources, and for `libatomic_ops` to the
                 /* We tried ...                                             */
             #endif
 
-        Being on [[service_solahart_jakarta_selatan__082122541663/glibc]], we could perhaps do similar as `USE_LIBC_PRIVATES`
+        Being on [[glibc]], we could perhaps do similar as `USE_LIBC_PRIVATES`
         instead of `HEURISTIC2`.  Pro: avoid `SIGSEGV` (and general fragility)
         during probing at startup (if I'm understanding this correctly).  Con:
         rely on glibc internals.  Or we instead add support to parse
@@ -232,7 +232,7 @@ sources, and for `libatomic_ops` to the
 
       * `read`
 
-        Sure that it doesn't internally (in [[service_solahart_jakarta_selatan__082122541663/glibc]]) use `malloc`.  Probably
+        Sure that it doesn't internally (in [[glibc]]) use `malloc`.  Probably
         only / mostly (?) a problem for `--enable-redirect-malloc`
         configurations?  Linux with threads uses `readv`.
 
