Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 7484a19008c223cb2157de87d0fb6c2c2fbc3180.

--- a/service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot.mdwn
@@ -24,7 +24,7 @@ License|/fdl]]."]]"""]]
     <youpi> it's just a argv[0] issue supposed to be fixed by exec_file_name
       but apparently not fixed in that case, for some reason
 
-[[service_solahart_jakarta_selatan__082122541663/glibc#execve_relative_paths]].
+[[glibc#execve_relative_paths]].
 
 
 ## IRC, freenode, #hurd, 2013-08-26
@@ -39,7 +39,7 @@ License|/fdl]]."]]"""]]
     < youpi> pinotree's exec_file_name is supposed to fix that, but for some
       reason it doesn't work here
 
-[[service_solahart_jakarta_selatan__082122541663/glibc#execve_relative_paths]].
+[[glibc#execve_relative_paths]].
 
     < pinotree> it was pochu's, not mine
     < youpi> ah, right
@@ -79,7 +79,7 @@ License|/fdl]]."]]"""]]
     <teythoon> but I'm not sure how to fix this
     <teythoon> first of all, Emilios file_exec_file_name patch set works fine
 
-[[service_solahart_jakarta_selatan__082122541663/glibc#execve_relative_paths]].
+[[glibc#execve_relative_paths]].
 
     <teythoon> but not with fakeroot
     <teythoon>
@@ -1309,7 +1309,7 @@ License|/fdl]]."]]"""]]
       fakeroot still has some issues (has it?), i consider it worthy for
       inclusion
 
-[[service_solahart_jakarta_selatan__082122541663/glibc#execve_relative_paths]].
+[[glibc#execve_relative_paths]].
 
     <youpi> Roland was disagreeing with it
     <youpi> iirc the fakeroot issue was solved
