Revert "update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn"
This reverts commit 38ec19e92bff25237d7c344fa818cef641d492a8.

--- a/service_solahart_jakarta_selatan__082122541663/vm_map_kernel_bug.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/vm_map_kernel_bug.mdwn
@@ -56,7 +56,7 @@ License|/fdl]]."]]"""]]
 
 # IRC, frenode, #hurd, 2013-01-22
 
-In context of [[service_solahart_jakarta_selatan__082122541663/libpthread]].
+In context of [[libpthread]].
 
     <braunr> pinotree: do you understand what the fmh function does in
       sysdeps/mach/hurd/dl-sysdep.c ?
