Revert "update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn"
This reverts commit 266d2841c5e0453e725165e8de7c83a06c79c67d.

--- a/service_solahart_jakarta_selatan__082122541663/synchronous_ipc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/synchronous_ipc.mdwn
@@ -149,7 +149,7 @@ From [[Genode RPC|microkernel/genode/rpc]].
     <braunr> doesn't seem to be a mach problem, rather a cthreads one
     <braunr> i hope we're able to remove the patch after pthreads are used
 
-[[service_solahart_jakarta_selatan__082122541663/libpthread]].
+[[libpthread]].
 
     <mcsim> braunr: You state that hurd can't move to sync ipc, since it
       depends on async ipc. But at the same time async ipc doesn't guarantee
