Revert "update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn"
This reverts commit 0f77599ee6d6d7788d2389a37cae0e91715d9abd.

--- a/service_solahart_jakarta_selatan__082122541663/console_tty1.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/console_tty1.mdwn
@@ -10,7 +10,7 @@ License|/fdl]]."]]"""]]
 
 [[!tag open_issue_hurd]]
 
-Seen in context of [[service_solahart_jakarta_selatan__082122541663/libpthread]], but probably not directly related to it.
+Seen in context of [[libpthread]], but probably not directly related to it.
 
 
 # IRC, freenode, #hurd, 2012-08-30
