Revert "update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn"
This reverts commit 45116a16a46445df7651ea7ffd6f95c487213997.

--- a/service_solahart_jakarta_selatan__082122541663/dde.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dde.mdwn
@@ -545,7 +545,7 @@ After the microkernel devroom at [[community/meetings/FOSDEM_2013]].
 
 ## IRC, freenode, #hurd, 2012-08-21
 
-In context of [[service_solahart_jakarta_selatan__082122541663/libpthread]].
+In context of [[libpthread]].
 
     <braunr> hm, i thought my pthreads patches introduced a deadlock, but
       actually this one is present in the current upstream/debian code :/
