Revert "update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn"
This reverts commit 87b6e0f990a4a9a75c2b10eca03882356be690ed.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -840,7 +840,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
       * <a id=getcontext>`getcontext`/`makecontext`/`setcontext`/`swapcontext`</a>
 
         Support for these functions within the Hurd threadvar environment has
-        been added, but for multi-threaded applications ([[service_solahart_jakarta_selatan__082122541663/libpthread]]), it is
+        been added, but for multi-threaded applications ([[libpthread]]), it is
         a bit clunky: as a practical requirement, a thread's stack size always
         has to be equal to `PTHREAD_STACK_DEFAULT`, 2 MiB, and also has to be
         naturally aligned.  The idea is still to [[get rid of Hurd threadvars
@@ -2173,7 +2173,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
 
     [[!message-id "201211172058.21035.toscano.pino@tiscali.it"]].
 
-    In context of [[service_solahart_jakarta_selatan__082122541663/libpthread]].
+    In context of [[libpthread]].
 
     IRC, freenode, #hurd, 2013-01-21
 
@@ -2707,7 +2707,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
       * ba384f6ed9275f3966505f2375b56d169e3dc588,
         0409959c86f6840510851a851a1588677a2e537b,
         e57b0c6100e63bfd816ae59339452eafc81f1d3a `C++11 thread_local
-        destructors support`.  Anything needed to be done in our [[service_solahart_jakarta_selatan__082122541663/libpthread]]
+        destructors support`.  Anything needed to be done in our [[libpthread]]
         and configured for us in [[service_solahart_jakarta_selatan__082122541663/Gcc]]?  Probably need to replicate the
         `nptl/pthread_create.c` change, and fix
         `stdlib/Makefile`:`$(objpfx)tst-tls-atexit`.
