Revert "update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn"
This reverts commit 3f27eabb8423cc97b71f4509d3462132161d290e.

--- a/service_solahart_jakarta_selatan__082122541663/versioning.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/versioning.mdwn
@@ -56,7 +56,7 @@ Remove this alias when we bump the libc soname.`
 
 [[!tag open_issue_glibc open_issue_libpthread]]
 
-In context of [[service_solahart_jakarta_selatan__082122541663/packaging_libpthread]]/[[service_solahart_jakarta_selatan__082122541663/libpthread]].
+In context of [[service_solahart_jakarta_selatan__082122541663/packaging_libpthread]]/[[libpthread]].
 
     <pinotree> once libc is switched internally from cthreads to pthreads (thus
       breaking its BC), may be worth cleanup the hurd-specific exported symbols
