Revert "update for rename of open_issues/libpthread.mdwn to service_solahart_jakarta_selatan__082122541663/libpthread.mdwn"
This reverts commit f07b16fb16d40196a3aeb22679108a26b99acb6a.

--- a/source_repositories/glibc.mdwn
+++ b/source_repositories/glibc.mdwn
@@ -29,7 +29,7 @@ Debian glibc is based on EGLIBC 2.13 and the Savannah hurd/glibc.git one is
 tracking sourceware master.
 
 The Savannah hurd/glibc.git one does not/not yet include
-[[libpthread|service_solahart_jakarta_selatan__082122541663/libpthread]], [[service_solahart_jakarta_selatan__082122541663/packaging_libpthread]].
+[[libpthread|open_issues/libpthread]], [[service_solahart_jakarta_selatan__082122541663/packaging_libpthread]].
 
 
 # Usage
