--- a/service_solahart_jakarta_selatan__082122541663/vfat_test_suite.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/vfat_test_suite.mdwn
@@ -17,4 +17,4 @@ one can find a VFAT Test Suite.  Run it on our [[hurd/translator/fatfs]].
 
 # See Also
 
-  * [[service_solahart_jakarta_selatan__082122541663/File_system_exerciser]]
+  * [[File_System_Exerciser]]
