Revert "update for rename of open_issues/file_system_exerciser.mdwn to service_solahart_jakarta_selatan__082122541663/file_system_exerciser.mdwn"
This reverts commit 6c514131cdb25e3fedbc43d18d9a85eada91e7e4.

--- a/service_solahart_jakarta_selatan__082122541663/performance/io_system/read-ahead.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance/io_system/read-ahead.mdwn
@@ -1874,7 +1874,7 @@ License|/fdl]]."]]"""]]
     <mcsim> braunr: looks fine, but TBH I can't even run such things like fsx,
       because even without my changes it failed mightily at once.
 
-[[service_solahart_jakarta_selatan__082122541663/file_system_exerciser]].
+[[file_system_exerciser]].
 
     <braunr> mcsim: right, well, that will be part of another task :)
 
