Revert "update for rename of open_issues/glibc/t/tls-threadvar.mdwn to service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar.mdwn"
This reverts commit bb65beba9e2151f4832198e2dba1e424f3c6107c.

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -602,7 +602,7 @@ Most of the issues raised on this page has been resolved, a few remain.
     <braunr> so for now, i'm using this approach as a hack only
     <tschwinge> I'm working on phasing out threadvars, but we're not there yet.
 
-[[service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]].
+[[glibc/t/tls-threadvar]].
 
     <tschwinge> Yes, that's fine for the moment.
     <braunr> tschwinge: a simple definition wouldn't work
