Revert "update for rename of open_issues/glibc/t/tls-threadvar.mdwn to service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar.mdwn"
This reverts commit 6b8f0043f9073b6eb62514da6b546ce8dd16df96.

--- a/service_solahart_jakarta_selatan__082122541663/gccgo.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gccgo.mdwn
@@ -39,7 +39,7 @@ Hurd port for Go is being polished.
 
 ## `getcontext`/`makecontext`/`setcontext`/`swapcontext` usage analysis
 
-In context of [[service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]].  Looking at GCC trunk commit
+In context of [[glibc/t/tls-threadvar]].  Looking at GCC trunk commit
 f6568ea476aa52a6e23c6db43b3e240cde55783a (2013-04-26).
 
 The check in `libgo/configure.ac` *whether setcontext clobbers TLS variables*
@@ -53,7 +53,7 @@ The `*context` functions are used in `libgo/runtime/go-signal.c` and
 `__splitstack_block_signals_context` are to be provided by libgcc.  However, in
 said libgo runtime files, they're used only `#ifdef USING_SPLIT_STACK`.
 [[I|tschwinge]] would assume that before we can enable split stacks, first
-[[service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]] needs to be fixed.
+[[open_issues/glibc/t/tls-threadvar]] needs to be fixed.
 
 In `libgo/runtime/proc.c`:`runtime_gogo`, `setcontext` is used to *switch
 context to a different goroutine*.  TODO.
