Revert "update for rename of open_issues/glibc/t/tls-threadvar.mdwn to service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar.mdwn"
This reverts commit 964655bf1e02bc053f4c1c1a557d2948a486dce3.

--- a/service_solahart_jakarta_selatan__082122541663/libpthread_set_stack_size.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread_set_stack_size.mdwn
@@ -23,7 +23,7 @@ IRC, freenode, #hurd, 2011-10-21:
     <youpi> of course, since we now have TLS, threadvards can go away
     <youpi> it's simply on the so-long TODO list
 
-[[service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]].
+[[glibc/t/tls-threadvar]].
 
 2012-12-28:
 
