Revert "update for rename of open_issues/dbus.mdwn to service_solahart_jakarta_selatan__082122541663/dbus.mdwn"
This reverts commit ea66a51e2b5d8eb9ea47c4ba7df806ac6326a104.

--- a/service_solahart_jakarta_selatan__082122541663/select.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select.mdwn
@@ -33,7 +33,7 @@ IRC, unknown channel, unknown date:
     <paakku> Or do I just imagine this problem?
 
 
-## [[service_solahart_jakarta_selatan__082122541663/dbus]]
+## [[dbus]]
 
 
 ## IRC
