--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -42,7 +42,7 @@ call|/glibc/fork]]'s case.
 
   * [[gnumach_page_cache_policy]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/metadata_caching]]
+  * [[metadata_caching]]
 
   * [[community/gsoc/project_ideas/object_lookups]]
 
