Revert "update for rename of open_issues/64-bit_port.mdwn to service_solahart_jakarta_selatan__082122541663/64-bit_port.mdwn"
This reverts commit dbf86018e102c66385f3e303cb85f5b6bf724721.

--- a/news/2011-q4.mdwn
+++ b/news/2011-q4.mdwn
@@ -114,7 +114,7 @@ improved key handling in libpthread.  Guillem Jover [fixed Mach's `int`
 vs. `long`
 discrepancy](http://lists.debian.org/debian-hurd/2011/10/msg00053.html), which
 takes us the first step towards [[porting the system to
-x86_64|service_solahart_jakarta_selatan__082122541663/64-bit_port]].
+x86_64|open_issues/64-bit_port]].
 
 If you want to join us in our journey to realize more of the promises of the
 architecture of the Hurd, please [[get in contact|contact_us]] -- and maybe
