Revert "update for rename of open_issues/time.mdwn to service_solahart_jakarta_selatan__082122541663/time.mdwn"
This reverts commit c8abc988f20132cc68a295107e4860abb867da3f.

--- a/service_solahart_jakarta_selatan__082122541663/performance/ipc_virtual_copy.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance/ipc_virtual_copy.mdwn
@@ -54,7 +54,7 @@ IRC, freenode, #hurd, 2011-09-02:
     <tschwinge> And I can confirm that with dd if=/dev/zero of=/dev/null bs=4k
       running, a parallel sleep 10 takes about 20 s (on strauss).
 
-[[service_solahart_jakarta_selatan__082122541663/time]]
+[[open_issues/time]]
 
     <braunr> slpz: i'll set up xen hosts soon and can try those tests while
       nothing else runs to have more accurate results
