Revert "update for rename of open_issues/metadata_caching.mdwn to service_solahart_jakarta_selatan__082122541663/metadata_caching.mdwn"
This reverts commit dab571cce758697d3349a361c1e691eb6a1e31b1.

--- a/service_solahart_jakarta_selatan__082122541663/gnumach_page_cache_policy.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gnumach_page_cache_policy.mdwn
@@ -630,7 +630,7 @@ License|/fdl]]."]]"""]]
       lot :)
 
 
-## [[service_solahart_jakarta_selatan__082122541663/metadata_caching]]
+## [[metadata_caching]]
 
 
 ## IRC, freenode, #hurd, 2012-07-12
