Revert "update for rename of open_issues/64-bit_port.mdwn to service_solahart_jakarta_selatan__082122541663/64-bit_port.mdwn"
This reverts commit 2a462923bb70b24986a9e45a27a93ff2303b327e.

--- a/microkernel/mach/gnumach/ports.mdwn
+++ b/microkernel/mach/gnumach/ports.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 
       * [[Xen]]
 
-      * [[service_solahart_jakarta_selatan__082122541663/64-bit_port]].  There is some preliminary work for a
+      * [[open_issues/64-bit_port]].  There is some preliminary work for a
         x86\_64 port.
 
   * [[service_solahart_jakarta_selatan__082122541663/Arm_port]].  Is not in a usable state.
