--- a/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
@@ -26,7 +26,7 @@ We have debugging infrastructure.  For example:
 
   * [[glibc]]'s sotruss
 
-  * [[service_solahart_jakarta_selatan__082122541663/ltrace]]
+  * [[ltrace]]
 
   * [[service_solahart_jakarta_selatan__082122541663/latrace]]
 
