--- a/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/profiling.mdwn
@@ -24,7 +24,7 @@ done for [[performance analysis|service_solahart_jakarta_selatan__082122541663/p
 
   * [[glibc]]'s sotruss
 
-  * [[service_solahart_jakarta_selatan__082122541663/ltrace]]
+  * [[ltrace]]
 
   * [[service_solahart_jakarta_selatan__082122541663/latrace]]
 
