Revert "update for rename of open_issues/_san.mdwn to service_solahart_jakarta_selatan__082122541663/_san.mdwn"
This reverts commit 4de8e78a62f9ee6ff9a87dff62f8895cf233c605.

--- a/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn
@@ -230,7 +230,7 @@ There is a [[!FF_project 276]][[!tag bounty]] on some of these tasks.
           grow-up stacks
 
   * GCC, LLVM/clang: [[Address Sanitizer (asan), Memory Sanitizer (msan),
-    Thread Sanitizer (tasn), Undefined Behavor Sanitizer (ubsan), ...|service_solahart_jakarta_selatan__082122541663/_san]]
+    Thread Sanitizer (tasn), Undefined Behavor Sanitizer (ubsan), ...|_san]]
 
   * [GCC plugins](http://gcc.gnu.org/wiki/plugins)
 
