Revert "update for rename of open_issues/pflocal_reauth.mdwn to service_solahart_jakarta_selatan__082122541663/pflocal_reauth.mdwn"
This reverts commit 00e273f576d3e7ad9bff04c1340cf83f65cb9d9a.

--- a/service_solahart_jakarta_selatan__082122541663/pflocal_socket_credentials_for_local_sockets.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/pflocal_socket_credentials_for_local_sockets.mdwn
@@ -63,4 +63,4 @@ License|/fdl]]."]]"""]]
 
 ---
 
-See also [[service_solahart_jakarta_selatan__082122541663/pflocal_reauth]] and [[sendmsg_scm_creds]].
+See also [[pflocal_reauth]] and [[sendmsg_scm_creds]].
