Revert "update for rename of open_issues/_san.mdwn to service_solahart_jakarta_selatan__082122541663/_san.mdwn"
This reverts commit 4a424a55541c57cd990d9d48896b5cd66c0fce8f.

--- a/service_solahart_jakarta_selatan__082122541663/llvm.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/llvm.mdwn
@@ -97,7 +97,7 @@ a06fe9183fbffb78798a444da9bc3040fdd444aa (2013-03-23), test-suite
     2012 Debian project,
     <http://wiki.debian.org/SummerOfCode2012/StudentApplications/AndrejBelym>.
 
-  * [[sanitizers|service_solahart_jakarta_selatan__082122541663/_san]]
+  * [[sanitizers|_san]]
 
     A lot of Linux-specific things.
 
