--- a/service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds.mdwn
@@ -169,4 +169,4 @@ License|/fdl]]."]]"""]]
 ---
 
 See also [[dbus]], [[service_solahart_jakarta_selatan__082122541663/pflocal_socket_credentials_for_local_sockets]] and
-[[service_solahart_jakarta_selatan__082122541663/pflocal_reauth]].
+[[pflocal_reauth]].
