Revert "update for rename of open_issues/gcc/pie.mdwn to service_solahart_jakarta_selatan__082122541663/gcc/pie.mdwn"
This reverts commit f5e9336cb5dc3224b4574f798fbdff7fbcf3a43b.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -56,7 +56,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
 
   * <a id=t_pie-sbrk>`t/pie-sbrk`</a>
 
-    [[service_solahart_jakarta_selatan__082122541663/gcc/Pie]].
+    [[gcc/PIE]].
 
   * <a id=t_sysvshm>`t/sysvshm`</a>
 
