Revert "update for rename of open_issues/select_vs_signals.mdwn to service_solahart_jakarta_selatan__082122541663/select_vs_signals.mdwn"
This reverts commit 75a7d1994fc520e46bf2eb970517d085c07ec6b2.

--- a/service_solahart_jakarta_selatan__082122541663/alarm_setitimer.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/alarm_setitimer.mdwn
@@ -110,7 +110,7 @@ See also [[select]].
       different from single reply port
     <youpi> I believe I understand what happens
 
-[[service_solahart_jakarta_selatan__082122541663/select_vs_signals]].
+[[select_vs_signals]].
 
     <youpi> I'll rebuild ntpdate with a 1s timeout
     <youpi> that'll at least fix that
