Revert "update for rename of open_issues/gcc/pie.mdwn to service_solahart_jakarta_selatan__082122541663/gcc/pie.mdwn"
This reverts commit 6593a6ba190d4fbb8ee577c188926b0a793bf57e.

--- a/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
@@ -632,7 +632,7 @@ like `gdb/testsuite/boards/cc-with-tweaks.exp` would help, or setting
         Cannot access memory at address 0x38f
         (gdb) FAIL: gdb.base/jit.exp: PIE: one_jit_test-1: Can't run to main
 
-    [[service_solahart_jakarta_selatan__082122541663/gcc/Pie]].
+    [[GCC/PIE]].
 
     Is the following supposed to terminate in this way?
 
