Revert "update for rename of open_issues/dde.mdwn to service_solahart_jakarta_selatan__082122541663/dde.mdwn"
This reverts commit 5823b418dd802029b0a7276a95dd749d550eedc9.

--- a/service_solahart_jakarta_selatan__082122541663/virtio.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtio.mdwn
@@ -14,7 +14,7 @@ License|/fdl]]."]]"""]]
 
 # IRC, freenode, #hurd, 2012-07-01
 
-In context of [[service_solahart_jakarta_selatan__082122541663/Dde]].
+In context of [[DDE]].
 
     <braunr> hm, i haven't looked but, does someone know if virtio is included
       in netdde ?
