Revert "update for rename of open_issues/versioning.mdwn to service_solahart_jakarta_selatan__082122541663/versioning.mdwn"
This reverts commit 105eaf0dfc1703a3d13217b7db0309992395a139.

--- a/microkernel/mach/message/msgh_id.mdwn
+++ b/microkernel/mach/message/msgh_id.mdwn
@@ -15,7 +15,7 @@ files.
 
 [[!toc]]
 
-See also [[service_solahart_jakarta_selatan__082122541663/versioning]].
+See also [[open_issues/versioning]].
 
 
 # IRC, freenode, #hurd, 2012-07-12
