Revert "update for rename of open_issues/binutils.mdwn to service_solahart_jakarta_selatan__082122541663/binutils.mdwn"
This reverts commit 08e2a3a0ca045edbb7f19fbcd43de30840a7da3c.

--- a/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
@@ -130,7 +130,7 @@ Last reviewed up to Git commit c2853f3d99797a321c37948297441ca6021f719a
          * `*-*-gnu*`
 
             TODO: resolve `crt0.o` vs. `crt1.o` issue.  [[Testsuite
-            failures|service_solahart_jakarta_selatan__082122541663/binutils#static]].
+            failures|binutils#static]].
 
       * `configure.tgt`
 
