Revert "update for rename of open_issues/binutils.mdwn to service_solahart_jakarta_selatan__082122541663/binutils.mdwn"
This reverts commit 56ff0d57bb746d413f5b58853b8120a403886b16.

--- a/service_solahart_jakarta_selatan__082122541663/performance/io_system/binutils_ld_64ksec.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance/io_system/binutils_ld_64ksec.mdwn
@@ -13,9 +13,9 @@ License|/fdl]]."]]"""]]
 This one may be considered as a testcase for [[I/O system
 optimization|community/gsoc/project_ideas/disk_io_performance]].
 
-It is taken from the [[binutils testsuite|service_solahart_jakarta_selatan__082122541663/binutils]],
+It is taken from the [[binutils testsuite|binutils]],
 `ld/ld-elf/sec64k.exp`, where this
-test may occasionally [[trigger a timeout|service_solahart_jakarta_selatan__082122541663/binutils#64ksec]].  It is
+test may occasionally [[trigger a timeout|binutils#64ksec]].  It is
 extracted from cdf7c161ebd4a934c9e705d33f5247fd52975612 sources, 2010-10-24.
 
     $ wget -O - http://www.gnu.org/software/hurd/open_issues/performance/io_system/binutils_ld_64ksec/test.tar.xz | xz -d | tar -x
