--- a/binutils.mdwn
+++ b/binutils.mdwn
@@ -15,7 +15,7 @@ is included in the section entitled
 # <http://www.gnu.org/software/binutils/>
 
 
-# [[Maintenance|service_solahart_jakarta_selatan__082122541663/binutils]]
+# [[Maintenance|open_issues/binutils]]
 
 
 # Open Issues
