Revert "update for rename of open_issues/binutils.mdwn to service_solahart_jakarta_selatan__082122541663/binutils.mdwn"
This reverts commit 01c79c806b661ad22f907bdefc1ca24e25737c83.

--- a/service_solahart_jakarta_selatan__082122541663/ifunc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/ifunc.mdwn
@@ -25,7 +25,7 @@ use it from GCC.
 
     Most of the executables that the testsuite generates don't actually
     execute.  (Though, this is partly due to the [[static
-    issue|service_solahart_jakarta_selatan__082122541663/binutils#static]].)
+    issue|binutils#static]].)
 
         $ tmpdir/local_prog 
         ifunc working correctly
