Revert "update for rename of open_issues/binutils.mdwn to service_solahart_jakarta_selatan__082122541663/binutils.mdwn"
This reverts commit 4f7f6453e9b8f3bac869d856a17766c5a87b481b.

--- a/service_solahart_jakarta_selatan__082122541663/git-core-2.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/git-core-2.mdwn
@@ -219,7 +219,7 @@ grubber:
 
 ## 2011-06-10
 
-coulomb.SCHWINGE, checking out [[service_solahart_jakarta_selatan__082122541663/binutils]]' master branch,
+coulomb.SCHWINGE, checking out [[binutils]]' master branch,
 starting from an empty working directory (after an external `git push`):
 
     $ git checkout -f
