--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -1836,7 +1836,7 @@ Same issue as [[service_solahart_jakarta_selatan__082122541663/term_blocking]] p
       functions completely restart
     <braunr> (e.g. one call to printf to write twice its output)
 
-[[service_solahart_jakarta_selatan__082122541663/git_duplicated_content]], [[service_solahart_jakarta_selatan__082122541663/git-core-2]].
+[[service_solahart_jakarta_selatan__082122541663/git_duplicated_content]], [[git-core-2]].
 
     * braunr is cooking a patch to fix pthread cancellation in
         pthread_cond_{,timed}wait, smells good
