--- a/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
@@ -30,7 +30,7 @@ abandoned).
         [[binutils testsuite|binutils]], etc.
 
   * The [[glibc testsuite|glibc]] has a home-grown system (Makefile-based),
-    likewise does the [[service_solahart_jakarta_selatan__082122541663/Open_posix_test_suite]].
+    likewise does the [[Open_POSIX_Test_Suite]].
 
   * [Kyua](http://code.google.com/p/kyua/) (and its predecessor [ATF](http://www.NetBSD.org/~jmmv/atf/)).
 
