Revert "update for rename of open_issues/visudo.mdwn to service_solahart_jakarta_selatan__082122541663/visudo.mdwn"
This reverts commit cf59d54e89daa1b93a2d400d03349a2b4fea4877.

--- a/service_solahart_jakarta_selatan__082122541663/file_locking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/file_locking.mdwn
@@ -21,7 +21,7 @@ License|/fdl]]."]]"""]]
 
 # visudo
 
-[[service_solahart_jakarta_selatan__082122541663/visudo]].
+[[visudo]].
 
 
 # Existing Work
