Revert "update for rename of open_issues/performance/io_system/clustered_page_faults.mdwn to service_solahart_jakarta_selatan__082122541663/performance/io_system/clustered_page_faults.mdwn"
This reverts commit 808682459a68725c17c9afb09949d8879a211865.

--- a/service_solahart_jakarta_selatan__082122541663/performance/io_system/read-ahead.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance/io_system/read-ahead.mdwn
@@ -304,7 +304,7 @@ License|/fdl]]."]]"""]]
     <braunr> what would really benefit the Hurd mostly concerns page faults, so
       the right place is the VM subsystem
 
-[[service_solahart_jakarta_selatan__082122541663/performance/io_system/clustered_page_faults]]
+[[clustered_page_faults]]
 
 
 # 2012-03
