Revert "update for rename of open_issues/multithreading.mdwn to service_solahart_jakarta_selatan__082122541663/multithreading.mdwn"
This reverts commit 1d9040f02be53722ad857eee9539c00654578707.

--- a/service_solahart_jakarta_selatan__082122541663/multiprocessing.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/multiprocessing.mdwn
@@ -74,4 +74,4 @@ On Thu, Jan 02, 2003 at 05:40:00PM -0800, Thomas Bushnell, BSG wrote:
 
 ---
 
-See also: [[service_solahart_jakarta_selatan__082122541663/multithreading]].
+See also: [[multithreading]].
