Revert "update for rename of open_issues/glibc/octave.mdwn to service_solahart_jakarta_selatan__082122541663/glibc/octave.mdwn"
This reverts commit af5f68d899575f856ddd00626eb0cefbba75c9cb.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -1891,7 +1891,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
 
     For specific packages:
 
-      * <a id=octave>[[service_solahart_jakarta_selatan__082122541663/glibc/octave]]</a>
+      * <a id=octave>[[octave]]</a>
 
   * <a id=t_cleanup_kernel-features.h>Create `t/cleanup_kernel-features.h`.</a>
 
