Revert "update for rename of open_issues/libnfs.mdwn to service_solahart_jakarta_selatan__082122541663/libnfs.mdwn"
This reverts commit 039f0583214257c8f2df8da956f512a184b2ba33.

--- a/hurd/translator/nfs.mdwn
+++ b/hurd/translator/nfs.mdwn
@@ -20,4 +20,4 @@ project's topic-branch.
 
   * [[libnetfs: `io_map`|service_solahart_jakarta_selatan__082122541663/libnetfs_io_map]] issue
 
-  * [[service_solahart_jakarta_selatan__082122541663/libnfs]]
+  * [[open_issues/libnfs]]
