Revert "update for rename of open_issues/select_bogus_fd.mdwn to service_solahart_jakarta_selatan__082122541663/select_bogus_fd.mdwn"
This reverts commit a968133b286a2edde413b57dd6d22be691ed664a.

--- a/service_solahart_jakarta_selatan__082122541663/select.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/select.mdwn
@@ -2437,4 +2437,4 @@ See also [[service_solahart_jakarta_selatan__082122541663/alarm_setitimer]].
 
 # See Also
 
-See also [[service_solahart_jakarta_selatan__082122541663/select_bogus_fd]] and [[select_vs_signals]].
+See also [[select_bogus_fd]] and [[select_vs_signals]].
