Revert "update for rename of open_issues/libtool.mdwn to service_solahart_jakarta_selatan__082122541663/libtool.mdwn"
This reverts commit 802dd645ca99db621ae435d58cdf1377359cff72.

--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -830,7 +830,7 @@ min on coulomb.SCHWINGE.
 
   * `libtool: finish`: `ldconfig` is not run for the Hurd.
 
-    [[service_solahart_jakarta_selatan__082122541663/libtool]].
+    [[libtool]].
 
   * `libjvm.la`, `.libs/libjvm.so`, `libgij.la`, `.libs/libgij.so.12.0.0`
 
