Revert "update for rename of open_issues/virtio.mdwn to service_solahart_jakarta_selatan__082122541663/virtio.mdwn"
This reverts commit 0db9a79cf7d05f85e0320010b188b354fff2d1b3.

--- a/service_solahart_jakarta_selatan__082122541663/dde.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/dde.mdwn
@@ -658,4 +658,4 @@ In context of [[libpthread]].
       hurd" mode to handle them
 
 
-# [[service_solahart_jakarta_selatan__082122541663/virtio]]
+# [[virtio]]
