Revert "update for rename of open_issues/virtio.mdwn to service_solahart_jakarta_selatan__082122541663/virtio.mdwn"
This reverts commit 188a19480d1a350391d2f4ec2b6eb6f76a775743.

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -95,7 +95,7 @@ example in the `gnumach` source tree for how to add a kernel trap. [[!GNU_Savann
 which exposes the partitions of the disk image, using parted, and
 the parted-based storeio (`settrans -c foos1 /hurd/storeio -T typed
 part:1:file:/home/samy/tmp/foo`). This would be libnetfs-based.
-* Write [[virtio drivers for KVM|service_solahart_jakarta_selatan__082122541663/virtio#KVM]].
+* Write [[virtio drivers for KVM|open_issues/virtio#KVM]].
 * Port valgrind. There is a whole
 [[GSoC proposal|community/gsoc/project_ideas/valgrind]] about this, but the
 basic port could be small.
