Revert "update for rename of open_issues/virtio.mdwn to service_solahart_jakarta_selatan__082122541663/virtio.mdwn"
This reverts commit c98f4bb53b2e7acfbde99fec0204d850210f2674.

--- a/hurd/running/cloud.mdwn
+++ b/hurd/running/cloud.mdwn
@@ -12,7 +12,7 @@ License|/fdl]]."]]"""]]
 
 It is possible to run the Hurd as a KVM-based OpenStack cloud instance.
 
-[[For the time being|service_solahart_jakarta_selatan__082122541663/virtio]], you'll have to avoid using virtio
+[[For the time being|open_issues/virtio]], you'll have to avoid using virtio
 drivers, and use emulated hardware instead:
 
     $ glance image-create --property hw_disk_bus=ide --property hw_cdrom_bus=ide --property hw_vif_model=rtl8139 --disk-format raw  --container-format bare --name gnu-hurd --copy-from http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img
