--- a/service_solahart_jakarta_selatan__082122541663/user-space_device_drivers.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/user-space_device_drivers.mdwn
@@ -205,7 +205,7 @@ A similar problem is described in
       kernel
     <braunr> we'd need to change the boot protocol
 
-[[service_solahart_jakarta_selatan__082122541663/virtio]].
+[[virtio]].
 
 
 #### IRC, freenode, #hurd, 2013-06-28
