Revert "update for rename of open_issues/virtio.mdwn to service_solahart_jakarta_selatan__082122541663/virtio.mdwn"
This reverts commit cab370981a3c3bb2e2fa4d8825de3c36457c2295.

--- a/faq/sata_disk_drives/discussion.mdwn
+++ b/faq/sata_disk_drives/discussion.mdwn
@@ -35,7 +35,7 @@ License|/fdl]]."]]"""]]
 
     <anatoly> What about virtio? will it speed up?
 
-[[service_solahart_jakarta_selatan__082122541663/virtio]].
+[[open_issues/virtio]].
 
     <youpi> probably not so much
     <youpi> because in the end it works the same
@@ -101,7 +101,7 @@ License|/fdl]]."]]"""]]
     <braunr> looks ok in recent versions
     <braunr> looks useful to have virtio drivers though
 
-[[service_solahart_jakarta_selatan__082122541663/virtio]].
+[[open_issues/virtio]].
 
     <anatoly> virtio is shown as fastest way for IO in the presentation
     <anatoly> Hm, failed to run qemu with AHCI enabled
