Revert "update for rename of open_issues/fork_deadlock.mdwn to service_solahart_jakarta_selatan__082122541663/fork_deadlock.mdwn"
This reverts commit f779475820e29104a39f42fdb5f572fe24257a69.

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -1156,7 +1156,7 @@ Most of the issues raised on this page has been resolved, a few remain.
     <braunr> the port leak i observed a few days ago is because of exim4 (the
       infamous loop eating the cpu we've been seeing regularly)
 
-[[service_solahart_jakarta_selatan__082122541663/fork_deadlock]]?
+[[fork_deadlock]]?
 
     <youpi> oh
     <braunr> next time it happens, and if i have the occasion, i'll examine the
