Revert "update for rename of open_issues/device_drivers_and_io_systems.mdwn to service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems.mdwn"
This reverts commit 829faccae3bef1c87afbae7a74a378e89426f1b7.

--- a/dde.mdwn
+++ b/dde.mdwn
@@ -12,7 +12,7 @@ License|/fdl]]."]]"""]]
 
   * [[open issues/user-space device drivers]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems]]
+  * [[open issues/device drivers and io systems]]
 
 ---
 
