Revert "update for rename of open_issues/device_drivers_and_io_systems.mdwn to service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems.mdwn"
This reverts commit 82e75b433a69219fc356e430b2677ee63229b612.

--- a/service_solahart_jakarta_selatan__082122541663/user-space_device_drivers.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/user-space_device_drivers.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 
 This is a collection of resources concerning *user-space device drivers*.
 
-Also see [[service_solahart_jakarta_selatan__082122541663/Device_drivers_and_io_systems]].
+Also see [[device drivers and IO systems]].
 [[community/gsoc/project ideas/driver glue code]].
 
 [[!toc levels=2]]
