Revert "update for rename of open_issues/crash_server.mdwn to service_solahart_jakarta_selatan__082122541663/crash_server.mdwn"
This reverts commit c37c1b1c60f54c3729e025d182404e1a2dd6b4be.

--- a/service_solahart_jakarta_selatan__082122541663/automatic_backtraces_when_assertions_hit.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/automatic_backtraces_when_assertions_hit.mdwn
@@ -35,7 +35,7 @@ In context of the [[ext2fs_libports_reference_counting_assertion]].
       -O2 -g) can give just pointer values in backtrace()'s output
     <braunr> core dumps are unreliable at best
 
-[[service_solahart_jakarta_selatan__082122541663/crash_server]].
+[[crash_server]].
 
     <braunr> uh, no, backtrace does give names
     <braunr> but not with -fomit-frame-pointer
