Revert "update for rename of open_issues/unit_testing.mdwn to service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn"
This reverts commit 0cef0564e508a598d9c0f739abb999f18e75dd8d.

--- a/service_solahart_jakarta_selatan__082122541663/security.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/security.mdwn
@@ -17,7 +17,7 @@ the correct coding paradigms.
 Large parts of our code base have not beed audited, either manually or in an
 automated fashion.
 
-[[service_solahart_jakarta_selatan__082122541663/Unit_testing]] is one aspect: testing for reliably failing for invalid input.
+[[Unit testing]] is one aspect: testing for reliably failing for invalid input.
 
 [[Code analysis]] is another aspect.
 
