Revert "update for rename of open_issues/unit_testing.mdwn to service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn"
This reverts commit 608e4423e7f44973482fa59ee20bec029b1b8167.

--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -26,7 +26,7 @@ environemnt that doesn't natively implement these interfaces, there may be a
 severe performance degradation.  For example, in this [[`fork` system
 call|/glibc/fork]]'s case.
 
-[[service_solahart_jakarta_selatan__082122541663/Unit_testing]] can be used for tracking performance regressions.
+[[Unit_testing]] can be used for tracking performance regressions.
 
 ---
 
