Revert "update for rename of open_issues/vm_map_kernel_bug.mdwn to service_solahart_jakarta_selatan__082122541663/vm_map_kernel_bug.mdwn"
This reverts commit a3c5c42c7bcf05556ad04ab379cf9a0830589a46.

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -2118,7 +2118,7 @@ Same issue as [[service_solahart_jakarta_selatan__082122541663/term_blocking]] p
     <braunr> i think we broke subhurds by fixing vm_map with size 0
     <pinotree> braunr: no idea, but i remember thomas talking about this code
 
-[[service_solahart_jakarta_selatan__082122541663/vm_map_kernel_bug]]
+[[vm_map_kernel_bug]]
 
     <braunr> it checks for KERN_INVALID_ADDRESS and KERN_NO_SPACE
     <braunr> and calls assert_perror(err); to make sure it's one of them
