--- a/microkernel/mach/gnumach/ports.mdwn
+++ b/microkernel/mach/gnumach/ports.mdwn
@@ -16,7 +16,7 @@ License|/fdl]]."]]"""]]
       * [[open_issues/64-bit_port]].  There is some preliminary work for a
         x86\_64 port.
 
-  * [[service_solahart_jakarta_selatan__082122541663/Arm_port]].  Is not in a usable state.
+  * [[open_issues/ARM_port]].  Is not in a usable state.
 
   * [PowerPC](http://www.pjbruin.dds.nl/hurd/).  Is not in a usable state.
 
