Revert "update for rename of open_issues/nightly_builds.mdwn to service_solahart_jakarta_selatan__082122541663/nightly_builds.mdwn"
This reverts commit 49e2c6b026fc8b2ee328f02de9654c2f7c6a9560.

--- a/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/unit_testing.mdwn
@@ -72,7 +72,7 @@ abandoned).
 
 # Related
 
-  * [[service_solahart_jakarta_selatan__082122541663/nightly_builds]]
+  * [[nightly_builds]]
 
       * [[nightly_builds_deb_packages]]
 
