--- a/service_solahart_jakarta_selatan__082122541663/ifunc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/ifunc.mdwn
@@ -40,7 +40,7 @@ use it from GCC.
 
   * [[glibc]]
 
-      * [[service_solahart_jakarta_selatan__082122541663/libc_variant_selection]]
+      * [[libc_variant_selection]]
 
   * [[service_solahart_jakarta_selatan__082122541663/Gcc]]
 
